agregar dashboard y mapa

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="logo">
-                <h1>🚕 Taxi Tracking</h1>
+                <h1>🚕 Track Car</h1>
                 <p>Sistema de Rastreo GPS</p>
             </div>
 
